<resources>
    <string name="app_name">Zotero Reader</string>
    <string name="api_url">https://api.zotero.org</string>
    <string name="title_library">Library</string>
    <string name="title_read">Read</string>
    <string name="title_settings">Settings</string>
    <string name="label_api_input">Zotero API Key</string>
    <string name="text_author_copyright">Copyright © 2020, Michael Pascale.</string>
    <string name="text_license">MIT Licensed.</string>
    <string name="label_night_mode_input">Dark Mode Preference</string>
    <string-array name="dropdown_options_night_mode">
        <item>Light</item>
        <item>Dark</item>
        <item>System default</item>
    </string-array>
</resources>