<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_settings">

    <fragment
        android:id="@+id/navigation_library"
        android:name="dev.psyc.zotero.ui.library.LibraryFragment"
        android:label="@string/title_library"
        tools:layout="@layout/fragment_library" />

    <fragment
        android:id="@+id/navigation_read"
        android:name="dev.psyc.zotero.ui.read.ReadFragment"
        android:label="@string/title_read"
        tools:layout="@layout/fragment_read" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="dev.psyc.zotero.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>